<resources>

    <string name="app_name">Peepz</string>
    <string name="sign_in">Sign in</string>
    <string name="set_picture_timer">Set picture timer</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="take_picture">Take picture</string>
    <string name="filter_options">Filter options</string>
    <string name="because_the_picture_take">Because the picture take</string>
    <string name="made_with_love_by_novoda">Made with 😘 by Novoda</string>
    <string name="show_offline_peepz">Show offline Peepz</string>
    <string name="_2_minutes">2 minutes</string>
    <string name="_5_minutes">5 minutes</string>
    <string name="off">Off</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>

    <string name="peepz_signin_button">@string/sign_in</string>
    <string name="peepz_signin_tagline">@string/because_the_picture_take</string>
    <string name="peepz_signin_footer">@string/made_with_love_by_novoda</string>

    <string name="peepz_menu_take_picture">@string/take_picture</string>
    <string name="peepz_menu_settings">@string/settings</string>
    <string name="peepz_menu_sign_out">@string/sign_out</string>

    <string name="settings_dialog_timer_heading">@string/set_picture_timer</string>
    <string name="settings_dialog_timer_frequent">@string/_2_minutes</string>
    <string name="settings_dialog_timer_infrequent">@string/_5_minutes</string>
    <string name="settings_dialog_timer_off">@string/off</string>
    <string name="settings_dialog_filters_heading">@string/filter_options</string>
    <string name="settings_dialog_filter_offline">@string/show_offline_peepz</string>
    <string name="settings_dialog_button_cancel">@string/cancel</string>
    <string name="settings_dialog_button_ok">@string/ok</string>

    <string name="action_set_timer_frequent">@string/_2_minutes</string>
    <string name="action_set_timer_infrequent">@string/_5_minutes</string>
    <string name="action_set_timer_off">@string/off</string>

</resources>
