<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="@color/white"
    tools:gravity="center"
    tools:layout_height="match_parent"
    tools:layout_marginTop="25dp"
    tools:layout_width="match_parent"
    tools:orientation="vertical"
    tools:parentTag="LinearLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:paddingTop="32dp">

        <com.novoda.support.FontTextView
            style="@style/PeepzApp.Settings.Dialog.Heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/settings_dialog_timer_heading" />

        <com.novoda.peepz.RadioButtonWidget
            android:id="@+id/settings_dialog_timer_frequent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/settings_dialog_timer_frequent" />

        <com.novoda.peepz.RadioButtonWidget
            android:id="@+id/settings_dialog_timer_infrequent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_dialog_timer_infrequent" />

        <com.novoda.peepz.RadioButtonWidget
            android:id="@+id/settings_dialog_timer_off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_dialog_timer_off" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|right"
        android:orientation="horizontal"
        android:padding="8dp">

        <com.novoda.support.FontTextView
            android:id="@+id/settings_dialog_button_cancel"
            style="@style/PeepzApp.Settings.Dialog.Button.Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:minWidth="72sp"
            android:text="@string/settings_dialog_button_cancel" />

        <com.novoda.support.FontTextView
            android:id="@+id/settings_dialog_button_ok"
            style="@style/PeepzApp.Settings.Dialog.Button.Ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:minWidth="72sp"
            android:text="@string/settings_dialog_button_ok" />

    </LinearLayout>

</merge>
